resources/css/style.css
/* StyleSheet for TimCakir.com */


/* Colors
Primary - #ef6c00 Spanish Orange -orange darken-3-
Secondary - #ffffff White
Third     - #e6e8e6 Platinum
Fourth    - #484349 Purple Taupe
Fifth     - #191919 Eerie Black
*/

h2.zero-rocket {
  text-align: center;
  color: #484349;
  padding-bottom: 18px;
}

h2.speak {
  text-align: center;
  color: #484349;
}

/* Brand Logo */

a.brand-logo {
  color: white;
  font-family: sans-serif;
  margin: auto;
}

.header.center {
  color: #ef6c00;
}


/* Material Icons */

.material-icons {
  font-size: 7em;
  color: #ef6c00;
}


/* center columns with 3 sections */

.col.s4 {
  text-align: center;
  padding-top: 15px;
  padding-bottom: 30px;
}

.promo-caption {
  color: #484349;
  font-weight: bold;
  font-size: 1.68rem;
}

p.light.center {
  color: #484349;
}

.nav-extended {
  background-color: #191919;
}

.row.video {
  background-color: #e6e8e6;
  margin-bottom: 0px;
}

.page-footer {
  background-color: #191919;
}

.footer-text {
  color: #ced0ce;
}

li.phone {
  color: #ef6c00;
  font-weight: bold;
  font-size: 20px;
  font-family: sans-serif;
}

#index-banner {
  background-color: #e6e8e6;
}

.col.s7.push-s5 {
  margin-top: 80px;
}

form p {
  font-weight: bold;
  font-size: 22px;
  font-family: sans-serif;
  text-transform: capitalize;
}

.material-icons.right {
  color: white;
}

.container p {
  text-align: center;
  color: #484349;
}

.picker__date-display {
  background-color: #ef6c00;
}

.tick {
  color: #ef6c00;
}

.tools {
  margin: 0 auto;
  max-width: 1260px;
  width: 100%;
  border-bottom: 1px solid #e6e8e6;
  text-align: center;
}

.btn.waves-effect.waves-light.orange.darken-3.special {
  margin-bottom: 50px;
}

/* Row of the Video and Form */
.row.video {
  width: auto;
  display: block;
  height: 720px;
}

/* Media Screen Adjustments smaller than 480px */
@media only screen and (max-width: 480px) {
  iframe {
    width: 165px;
    height: auto;
  }

  .row.video {
    height: auto;
  }

  .material-icons {
    font-size: 5em;
  }

  .promo-caption {
    font-size: 1em;
  }

  h1 {
    font-size: 2.2em;
  }

  h2 {
    font-size: 1.8em;
  }

  h5 {
    font-size: 1.2em;
  }
}

